# pico-freeRTOS-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
